--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,14 @@
 :root {
-    --bg-color: #333333;
-    --text: #fff;
-    --secondary-text: #333333;
-    --main: #0498c9;
-    --secondary: #fff;
-    --tertiary: #fff;
-  }
-  /* Potential dark/light themes later */
-  /* :root.light {
+  --bg-color: #fff;
+  --text: #333;
+  --secondary-text: #333333;
+  --main: #0498c9;
+  --secondary: #333333;
+  --tertiary: #fff;
+}
+
+/* Potential dark/light themes later */
+/* :root.light {
     --bg-color: #333333;
     --text: #fff;
     --secondary-text: #333333;
@@ -23,65 +24,301 @@
     --tertiary: #FFF;
   } */
 
+  /* For input labels */
+  .form-control {
+    line-height: 1.1;
+    padding: 0.1em 0.4em;
+  }
+
+body {
+  font-family: "Dosis", sans-serif;
+  font-size: 1.2em;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
 p {
-    width: 75%;
-    text-align: center;
+  width: 75%;
+  text-align: center;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
+}
+
+/* Banner */
+.banner {
+  display: flex;
+  align-self: flex-start;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--text, black);
+  background: var(--main, white);
+}
+
+.banner-title {
+  padding-bottom: 0px;
+  font-size: 1.6em;
+  font-weight: bold;
+}
+.banner-subtitle {
+  padding-top: 0px;
+  font-size: 0.8em;
+}
+
+.banner a {
+  color: var(--text);
+  text-decoration: none;
 }
 
 /* Box */
 .box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.box-small {
-    width: 25%;
-}
-.box-full {
-    width: 100%;
-}
-.box-nocenter {
-    align-items: flex-start;
-    justify-content: flex-start;
-}
-.box-vertical {
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* Card */
+.box-small {
+  width: 25%;
+}
+
+.box-full {
+  width: 100%;
+}
+
+.box-nocenter {
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.box-vertical {
+  flex-direction: column;
+}
+
+/* Button */
+.btn {
+  padding: 0.5em 1em;
+  color: var(--text, black);
+  background: var(--main, white);
+  border: 1px solid var(--secondary, lightgray);
+  border-radius: 8px;
+  box-shadow: -1px 2px var(--tertiary, darkgray);
+  text-decoration: none;
+}
+
+.btn-secondary {
+  color: var(--secondary-text, white);
+  border: 1px solid var(--main, white);
+  background: var(--secondary, black);
+}
+
+.btn:hover {
+  /* background: var(--tertiary, darkgray); */
+  cursor: pointer;
+  box-shadow: -2px 2.5px var(--tertiary, darkgray);
+  transform: translate(1px, -1.5px);
+}
+.btn:active {
+  box-shadow: 0px 0px;
+  transform: translate(0px, 0px);
+}
+
+.btn-plain {
+  border: 1px solid var(--secondary, lightgray);
+  box-shadow: 0px 0px;
+}
+.btn-plain:hover {
+  box-shadow: 0px 0px;
+  transform: translate(0px, 0px);
+}
+
+.btn:disabled {
+  color: gray;
+  background: lightgray;
+  border: 1px solid darkgray;
+  box-shadow: 0px 0px;
+  pointer-events: none;
+}
+
+.btn-small {
+  width: 75px;
+  height: 25px;
+  font-size: 0.6em;
+  font-weight: bold;
+}
+
+/** Card **/
 .card {
-    display: flex;
-    height: 200px;
-    width: 75%;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid var(--secondary);
-    padding: 1em;
-    margin: 1em;
-    text-align: center;
-    border-radius: 8px;
+  display: flex;
+  height: 200px;
+  width: 75%;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid var(--secondary);
+  padding: 1em;
+  margin: 1em;
+  text-align: center;
+  border-radius: 8px;
 }
-.card-full-width {
-    width: 100%;
+
+.card-backdrop {
+  box-shadow: -3px 5px var(--main);
 }
+
+/* Card sizes */
+.card-full {
+  width: 100%;
+}
+
+.card-micro {
+  height: auto;
+  width: auto;
+  padding: 1em;
+}
+
+/* Card anatomy */
 .card-header {
-    display: flex;
-    width: 60%;
-    align-content: center;
-    justify-content: center;
-    padding: 0px 2em;
-    margin-bottom: 0.5em;
-    border-bottom: 1px solid var(--main);
-  }
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 0em 1em 0em;
+  height: 33%;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  padding: 1.3em;
+  height: 42%;
+}
+
+.card-footer {
+  height: 25%
+}
+
+.category-header {
+  font-size: 1.15em;
+  font-weight: bold;
+  padding: 7px 0px;
+  text-decoration: underline;
+}
+.category-item {
+  padding: 5px 0px;
+}
+
+/** Checkbox **/
+input[type="checkbox"] {
+  /* Hide checkbox default styles */
+  appearance: none;
+  background-color: var(--bg-color);
+  margin: 0;
+  
+  /* Custom style */
+  font: inherit;
+  color: var(--main);
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid var(--secondary);
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+
+  display: grid;
+  place-content: center;
+}
+input[type="checkbox"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em var(--main);
+
+  /* Checkmark style */
+  transform-origin: bottom left;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
+}
+input[type="checkbox"]:hover {
+  cursor: pointer;
+}
+
+.color-box {
+  font: inherit;
+  color: #fff;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid var(--secondary);
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+}
+
+/* Dropdown */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 60px;
+  right: 15px;
+  background-color: rgba(0, 0, 0, 0);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rbga(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  background-color: lightgray;
+  opacity: 0%;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.intro {
+  font-family: "Bad Script", serif;
+  font-size: 2.5em;
+  font-weight: bold;
+}
 
 .pad-medium {
-    padding: 3em;
+  padding: 3em;
+}
+
+.tag {
+  font-size: 12px;
+  padding: 0em 1em;
+  border: 1px solid black;
+  border-radius: 4px;
+  opacity: 1;
+  background-color: #fff;
+}
+
+#categoriesContainer {
+  display: grid;
+  grid-template-columns: 150px 25px;
+  /* grid-template-rows: repeat(auto-fit, 1fr); */
+  grid-auto-rows: auto;
 }
 
 #filtersPanel {
-    border: 1px solid black;
+  border: 1px solid black;
+  padding: 1em 1em;
+}
+
+#recipesContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(max(350px, 400px), 1fr));
+  gap: 1em;
+  justify-items: center;
 }
