--- a/styles/index.css
+++ b/styles/index.css
@@ -18,7 +18,7 @@ body {
 #header {
     position: sticky;
     top: 0;
-    width: 100vw;
+    width: 100%;
     z-index: 1;
 }
 
@@ -90,8 +90,8 @@ body {
     position: sticky;
     top: 100px;
     width: 25%;
-    max-width: 330px;
     min-width: 250px;
+    max-width: 330px;
 }
 
 #sidebar-content {
@@ -177,9 +177,73 @@ body {
     gap: 0.2em;
 }
 
+#favorites-area {
+    font-size: 20px;
+}
+
+#favorites-list li {
+    /* list-style-type: none; */
+    font-size: 20px;
+}
+
+.favorite-text {
+    color: var(--font);
+    display: inline-block;
+    margin-right: 12px;
+}
+
+#chef-container {
+    margin-bottom: 1em;
+}
+
+#random-recipe-container {
+    font-size: 20px;
+}
+
+.random-recipe-item {
+    margin: 1em;
+}
+
 /*** RECIPES AREA PROPERTIES ***/
 #recipes {
     width: 70%;
+    margin: 0;
+    padding: 0;
+}
+
+.grid-area {
+    display: none;
+    width: 100%;
+}
+
+.grid-item {
+    display: inline-block;
+    margin: 1em;
+    width: 350px;
+}
+
+
+.recipe-header-button {
+    background: none;
+    border: none;
+}
+
+.recipe-header-button {
+    cursor: pointer;
+    margin: 0 1em 2em 1em;
+}
+
+.recipe-header-button h2 {
+    font-family: "Dosis";
+    color: font;
+}
+
+.recipe-button-selected {
+    border-bottom: 3px solid var(--font);
+}
+
+.recipe-area-selected {
+    display: block;
 }
 
 #recipes-content {
@@ -188,7 +252,57 @@ body {
     text-align: center;
 }
 
+.recipe-card {
+    margin: auto;
+    width: 100%;
+}
+
+.recipe-card-header {
+    vertical-align: middle;
+    padding: 1em;
+    background-color: var(--tertiary);
+    border: 3px solid var(--tertiary);
+    border-bottom: 3px solid var(--alternate);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: white;
+}
+
+.recipe-card-body {
+    vertical-align: middle;
+    overflow: auto;
+    padding: 1em;
+    border: 3px solid var(--primary);
+    border-top: none;
+    border-bottom: none;
+    height: 150px;
+}
+
+.recipe-card-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    padding: 1em;
+    border: 3px solid var(--primary);
+    /* border-top: 3px solid var(--alternate); */
+    border-top: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    /* background-color: var(--tertiary); */
+    /* color: white; */
+}
+
+.fav-button-icon {
+    font-size: 2em;
+    margin-left: 10px;
+}
+
 /*** MULTI USE ***/
+.authenticated-only {
+    display: none;
+}
+
 .standard-button {
     margin: 0 0.5em;
     padding: 0.5em 1em;
@@ -205,4 +319,14 @@ body {
 .standard-button:active {
     box-shadow: 0px 0px;
     transform: translate(0px, 0px);
-  }
+}
+
+.plain-button {
+    margin: 0;
+    padding: 0;
+    background: none;
+    border: none;
+}
+.plain-button:hover {
+    cursor: pointer;
+}
