--- a/styles/index.css
+++ b/styles/index.css
@@ -24,7 +24,7 @@
 
 #main-content-area section {
     margin: 2em 0 0 1em;
-    float: left;
+    /* float: left; */
 }
 
 /*** SIDEBAR PROPERTIES ***/
