--- a/styles/recipe.css
+++ b/styles/recipe.css
@@ -2,7 +2,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 20px;
+}
+
+h1 {
+  font-size: 36px;
 }
 
 section {
@@ -12,20 +15,6 @@ section {
   align-items: center;
   text-align: center;
   margin: 1em;
-}
-
-#options-section {
-  display: flex;
-  align-items: start;
-  width: 100%;
-  text-align: left;
-}
-
-#options-section button {
-  color: var(--secondary);
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0.8em;
 }
 
 th {
@@ -38,12 +27,21 @@ td {
   border-collapse: collapse;
 }
 td:nth-child(1) {
-  text-align: start;
   border-right: 1px solid var(--primary);
   border-collapse: collapse;
 }
-td:nth-child(2) {
-  text-align: end;
+td:nth-child(3) {
+  border-left: 1px solid var(--primary);
+  border-collapse: collapse;
+}
+
+.step-item {
+  padding-bottom: 1em;
+}
+
+.step-item div {
+  width: 100%;
+  text-align: start;
 }
 
 .step-num {
