--- a/styles/shared.css
+++ b/styles/shared.css
@@ -10,6 +10,7 @@
 
 body {
   margin: 0;
+  height: auto;
   color: var(--font, black);
   font-family: Dosis, sans-serif;
 }
@@ -22,8 +23,12 @@ body {
   z-index: 1;
 }
 
+#header h1 {
+  font-size: 36px;
+}
+
 #header-bar {
-  height: 70px;
+  height: 80px;
   background-color: #8ECAE6;
   border: 1px solid #219EBC;
   font-size: 24px;
@@ -32,12 +37,24 @@ body {
   line-height: 0px;
 }
 
-#links-bar {
+#header-links {
+  padding: 10px;
+}
+
+#header-links a {
+  color: var(--font);
+  font-size: 18px;
+  padding: 10px;
+}
+
+#return-bar {
   position: relative;
-  top: -5px;
+  top: -4px;
+  vertical-align: middle;
+  line-height: 40px;
   margin: 0 auto;
-  height: 50px;
-  width: 130px;
+  height: 40px;
+  width: 200px;
   text-align: center;
   border-radius: 5px;
   background-color: #219EBC;
@@ -47,13 +64,17 @@ body {
 
 #links-bar i {
   color: var(--font);
-  font-size: 24px;
   margin: 15px;
 }
 
 #links-bar a {
   margin: auto;
   text-decoration: none;
+  color: var(--font);
+}
+
+.loading-img {
+  vertical-align: middle;
 }
 
 /*** BUTTONS ***/
