--- a/styles/shared.css
+++ b/styles/shared.css
@@ -13,6 +13,7 @@ body {
   height: auto;
   color: var(--font, black);
   font-family: Dosis, sans-serif;
+  font-size: 21px;
 }
 
 /*** HEADER PROPERTIES ***/
@@ -96,6 +97,18 @@ body {
   transform: translate(0px, 0px);
 }
 
+.secondary-button {
+  margin: 0 0.5em;
+  padding: 0.5em 1em;
+  background-color: var(--primary);
+  border: 1px solid var(--secondary);
+  border-radius: 5px;
+  /* box-shadow: 1px 2px var(--secondary); */
+}
+.secondary-button:hover {
+  cursor: pointer;
+}
+
 .plain-button {
   margin: 0;
   padding: 0;
@@ -104,4 +117,29 @@ body {
 }
 .plain-button:hover {
   cursor: pointer;
+}
+
+/*** INPUT ***/
+.input {
+  font-family: Dosis;
+  font-size: 16px;
+  height: 28px;
+  width: 200px;
+  margin-bottom: 1em;
+  border: 1px solid var(--alternate2);
+  border-radius: 8px;
+}
+.input:focus {
+  outline: none;
+  transform: translate(1.1px, 1px);
+  box-shadow: inset 1.1px 1px var(--alternate2);
+}
+.input-wide {
+  width: 400px;
+}
+.input-medium {
+  height: 30px;
+}
+.input-tall {
+  height: 100px;
 }
