--- a/styles/shared.css
+++ b/styles/shared.css
@@ -63,6 +63,11 @@ body {
   z-index: -1;
 }
 
+#return-bar a {
+  color: var(--font);
+  text-decoration: none;
+}
+
 #links-bar i {
   color: var(--font);
   margin: 15px;
@@ -80,6 +85,12 @@ body {
 
 /*** BUTTONS ***/
 .standard-button {
+  color: var(--font);
+  font-family: Arial;
+  font-size: 12px;
+  text-align: center;
+  text-decoration: none;
+  min-width: 100px;
   margin: 0 0.5em;
   padding: 0.5em 1em;
   background-color: var(--alternate);
@@ -95,6 +106,15 @@ body {
 .standard-button:active {
   box-shadow: 0px 0px;
   transform: translate(0px, 0px);
+}
+.standard-button:disabled {
+  background-color: lightgrey;
+  border: 1px solid darkgray;
+  box-shadow: none;
+}
+.standard-button:disabled:hover {
+  transform: none;
+  cursor: auto;
 }
 
 .secondary-button {
@@ -120,7 +140,7 @@ body {
 }
 
 /*** INPUT ***/
-.input {
+input[type="text"], input[type="search"], textarea {
   font-family: Dosis;
   font-size: 16px;
   height: 28px;
@@ -129,7 +149,7 @@ body {
   border: 1px solid var(--alternate2);
   border-radius: 8px;
 }
-.input:focus {
+input[type="text"]:focus, input[type="search"]:focus {
   outline: none;
   transform: translate(1.1px, 1px);
   box-shadow: inset 1.1px 1px var(--alternate2);
@@ -142,4 +162,154 @@ body {
 }
 .input-tall {
   height: 100px;
+}
+
+input[type="checkbox"] {
+  /* Reset default values */
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  /* Custom values */
+  font: inherit;
+  color: var(--font);
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid var(--alternate2);
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+  display: grid;
+  place-content: center;
+}
+input[type="checkbox"]:hover {
+  cursor: pointer;
+}
+input[type="checkbox"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em var(--font);
+  /* Windows High Contrast Mode */
+  background-color: CanvasText;
+  /* Check style */
+  transform-origin: bottom left;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
+}
+input[type="checkbox"]:focus {
+  outline: max(2px, 0.15em) solid var(--alternate);
+  outline-offset: max(2px, 0.15em);
+}
+
+.fast-spin {
+  transform-origin: center;
+  -webkit-animation: fa-spin 1s infinite linear;
+  animation: fa-spin 1s infinite linear;
+}
+
+.load-primary {
+  color: var(--alternate);
+}
+
+.load-secondary {
+  color: var(--font);
+}
+
+/*** MODALS ***/
+.full-modal {
+  position: fixed;
+  top: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(200, 200, 200, 0.9);
+  z-index: 100;
+  height: 100vh;
+  width: 100%;
+}
+
+.small-modal {
+  position: fixed;
+  display: none;
+  top: 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(200, 200, 200, 0.9);
+}
+#filter-modal-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  min-height: 300px;
+  min-width: 500px;
+  height: 45%;
+  width: 70%;
+  text-align: center;
+  background-color: var(--primary);
+}
+.filter-table td:nth-child(2) {
+  padding-left: 15px;
+}
+#filter-buttons-container {
+  margin-top: 10px;
+}
+
+.message-modal-container {
+  position: fixed;
+  top: 100px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+  z-index: 100;
+}
+
+.message-modal {
+  display: flex;
+  padding: 0.5em 1em;
+  justify-content: center;
+  align-items: center;
+  min-width: 200px;
+  max-width: 300px;
+  min-height: 50px;
+  border-radius: 10px;
+}
+
+.message-modal div {
+  text-align: center;
+}
+
+.error-modal {
+  border: 1px solid red;
+  background-color: #FB8B8B;
+  color: #893F3F;
+}
+
+.success-modal {
+  border: 1px solid darkgreen;
+  background-color: #92F97B;
+  color: #459932;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+/*** OTHER ***/
+.error-icon {
+  color: red;
 }
